--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,10 @@
     padding: 0px;
     box-sizing: border-box;
 }
-  
-  body {
+body {
     background-color: #222222;
     font-family: 'Roboto', sans-serif;
 }
-  
 .header {
     width: 80vw;
     margin: 0 auto;
@@ -26,7 +24,6 @@
     text-decoration: none;
     color: #ffffff;
     font-weight: 900;
-    font-style: 900;
 }
 .header__lists {
     display: flex;
@@ -57,7 +54,6 @@
     padding: 50px 0;
     color: #ffffff;
     font-weight: 900;
-    font-style: 900;
 }
 .movies {
     display: flex;
@@ -79,8 +75,28 @@
     height: 450px;
     border-radius: 20px;
     image-rendering: -webkit-optimize-contrast;
-    transition: 0.2s;
+    transition: 0.3s;
 }
 .movie img:hover {
-    opacity: 0.6;
+    /* opacity: 0.8; */
+    transform: scale(1.007);
+}
+.movie h2 {
+    text-align: center;
+    color: #8f8e8e;
+}
+.error__title {
+    color: #ffffff;
+    font-size: 26px;
+    text-align: center;
+}
+
+@media (max-width: 424px) {
+    .header__content {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .header__search {
+        width: 100%;
+    }
 }
